fixed navbar covering up welcome tag on homepage

--- a/src/home/homestyles.css
+++ b/src/home/homestyles.css
@@ -1,3 +1,5 @@
-welcomeTag {
-    text-align: right;
+.welcomeTag{
+    margin-top: 10%;
+    font-size: 100px;
+    text-align: center;
 }
