--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,6 @@
   font-family: sans-serif;
   background: linear-gradient(cornflowerblue, steelblue)no-repeat;
 } */
-/* html {
+ html {
   height:100%;
-} */
+} 
